force-app/main/default/objects/ProductDescription__c/ProductDescription__c.object-meta.xml
<CustomObject>
    <label>Product Description</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>