force-app/main/default/objects/ProductDescription__c/fields/DescriptionCZ__c.field-meta.xml
<CustomField>
    <fullName>DescriptionCZ__c</fullName>
    <label>Description CZ</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>