force-app/main/default/objects/ProductDescription__c/fields/DescriptionEN__c.field-meta.xml
<CustomField>
    <fullName>DescriptionEN__c</fullName>
    <label>Description EN</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>