force-app/main/default/objects/ProductDescription__c/fields/RowNumber__c.field-meta.xml
<CustomField>
    <fullName>RowNumber__c</fullName>
    <label>Row Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>