force-app/main/default/objects/ProductDescription__c/fields/TitleCZ__c.field-meta.xml
<CustomField>
    <fullName>TitleCZ__c</fullName>
    <label>Title CZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>